# amazon-freertos

demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h
projects/renesas/rx65n-rsk/e2studio/aws_tests/: .project
projects/renesas/rx72n-envision-kit/e2studio/aws_demos/: .project  aws_demos HardwareDebug.launch
projects/renesas/rx72n-envision-kit/e2studio/aws_tests/: .cproject
projects/renesas/rx72n-envision-kit/e2studio/aws_tests/flash_project/: flash_project.rpj
vendors/renesas/boards/rx72n-envision-kit/: CMakeLists.txt
vendors/renesas/rx_driver_package/v125/r_bsp/mcu/all/: r_bsp_common.h
